# gruponos-meltano-native

./: .env  .env.backup  .env.example  .env.template  .env.test  .gitignore  .pre-commit-config.yaml  =1  =4.18.0  ARCHITECTURE.md  AUDITORIA_FLEXT_TAP_ORACLE_WMS.md  BILLION_RECORD_OPTIMIZATIONS.md  CHANGELOG.md  CLAUDE.md  CONFIGURATION_MIGRATION_GUIDE.md  END_TO_END_VALIDATION_REPORT.md  FLEXT_INTEGRATION_COMPLETE.md  GENERICIZATION_SUMMARY.md  LINT_MYPY_FIX_SUMMARY.md  LOGGING_MIGRATION.md  Makefile  OPERATIONS.md  OPERATIONS_GUIDE.md  README.md  REAL_STATUS.md  REFACTORING_PLAN.md  REFATORACAO_CONCLUIDA.md  SCHEMA_DISCOVERY_FIX_SUMMARY.md  STATUS_REPORT_100_PERCENT.md  UNIFICACAO_REGRAS_TABELAS.md  USE_ENHANCED_CONNECTION.md  __init__.py  all_entities_catalog.json  all_entities_data.json  catalog.json  catalog_debug.json  catalog_order_hdr_full.json  check_columns.py  check_data_behavior.py  check_data_count.py  (+86 more)
.cursor/: settings.json  settings.json.template
.github/workflows/: ci.yml  docs-maintenance.yml
.meltano/: analytics.json  meltano.db  meltano.db-shm  meltano.db-wal
.meltano/run/: bin
.serena/: project.yml
archive/legacy-scripts/: run_allocation_full.sh  run_allocation_incremental.sh  run_e2e_test.sh  run_order_dtl_full.sh  run_order_dtl_incremental.sh  run_order_hdr_full.sh  run_order_hdr_incremental.sh  test_real_extraction.sh
archive/temp-configs/: all_entities_data.json  catalog_allocation.json  catalog_allocation_full.json  catalog_allocation_incremental.json  catalog_filtered.json  catalog_order_dtl_full.json  catalog_test.json  e2e_config.json  e2e_data.json  order_dtl_config.json  order_hdr_config.json  tap-config.json  tap_config.json  target_oracle_config.json  test_all_entities_config.json  test_catalog.json  test_incremental_catalog.json  test_incremental_config.json
archive/test-files/: PLUGIN_INTEGRATION_SUCCESS.md  SYNC_CORRECTION_SUCCESS.md
config/: critical_settings.sh  project.yml  wms_integration.yml
config/environments/: dev.yml  prod.yml
docs/: DOCUMENTATION_COMPLETE.md  MELTANO_TYPE_CONVERSION_FIX.md  OPERATIONS.md  README.md  TODO.md  TROUBLESHOOTING.md  docs_maintenance_config.json  implementation_status.md  phase4_implementation_plan.md  testing.md  testing_plan.md
docs/api/: README.md
docs/architecture/: README-SUITE.md  README.md  c4-model.md  data-architecture.md  flext-integration.md  quality-attributes.md  readme-suite.md  security-architecture.md
docs/business/: oracle-wms.md
docs/dashboard/: documentation_dashboard_20251010.html
docs/deployment/: README.md
docs/guides/: implementation_status.md  phase4_implementation_plan.md
docs/maintenance/: README.md  config.yaml
docs/pydantic-v2-modernization/: audit_pydantic_v2.py
docs/reports/: test_audit.json
docs/standards/: python-module-organization.md
examples/: 01_config_usage.py  README.md  __init__.py  config_usage.py
flext_target_oracle/: connectors.py
flext_target_oracle.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
flext_target_oracle/flext_target_oracle.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
logs/nohup/: allocation_hybrid.err  order_dtl_hybrid.err  order_hdr_hybrid.err
pids/: allocation_hybrid_wrapper.sh  allocation_real_wrapper.sh  allocation_simple_wrapper.sh  fixed_full_sync.pid  full_sync.pid  order_dtl_hybrid_wrapper.sh  order_dtl_individual_wrapper.sh  order_hdr_hybrid_wrapper.sh  order_hdr_individual_wrapper.sh
scripts/: __init__.py  analyze_unused_code.py  automated_docs_maintenance.sh  check_meltano_sync.py  configure_project.py  connection_comparison.py  docs_dashboard.py  docs_maintenance.py  docs_maintenance_crontab  full_sync_allocation.sh  full_sync_order_dtl.sh  full_sync_order_hdr.sh  incremental_sync_allocation.sh  incremental_sync_order_dtl.sh  incremental_sync_order_hdr.sh  meltano_commands.sh  monitor-dashboard.sh  monitor-incremental.sh  prepare_config.py  run-real-pipeline.sh  start-entity-hybrid.sh  start-simple.sh  test_meltano_sync.py  validate_integration.py  wms_sync_manager.sh
scripts_backup/: execute_100_percent_real.py  execute_all_6_jobs_real.py  execute_real_pipeline.py  simple_oracle_target.py  simple_target_oracle.py  simple_target_oracle_fixed.py  simple_target_wrapper.py  simple_working_target.py
scripts_final_backup/: __init__.py  cli.py  filter_catalog.py  final_validation.sh  full_sync_allocation.sh  full_sync_order_dtl.sh  full_sync_order_hdr.sh  health-check.sh  incremental_sync_allocation.sh  incremental_sync_order_dtl.sh  incremental_sync_order_hdr.sh  meltano_tap_wrapper.py  monitoring.sh  run-full-sync.sh  simulate_order_dtl_tap.py  sinks.py  start-entity-real.sh  start-entity.sh  start-production.sh  tap_oracle_wms_native.py  target.py  wms_sync_manager.sh
sql/: wms_schemas.json
sql/ddl/: README.md  allocation_table.sql  allocation_table_backup.sql  create_all_tables.sql  order_dtl_table.sql  order_dtl_table_backup.sql  order_hdr_table.sql  order_hdr_table_backup.sql
src/: README.md  __init__.py
src/gruponos_meltano_native/: README.md  __init__.py  __version__.py  _cli_main.py  cli.py  config.py  constants.py  exceptions.py  models.py  orchestrator.py  protocols.py  settings.py  typings.py  version.py
src/monitoring/: __init__.py  alert_manager.py
src/oracle/: __init__.py  connection_manager.py  connection_manager_enhanced.py  discover_and_save_schemas.py  recreate_tables_and_sync.py  table_creator.py  type_mapping_rules.py  validate_sync.py
src/validators/: __init__.py  data_validator.py
state/: last_full_sync.state  last_incremental_sync.state
tests/: README.md  __init__.py  conftest.py  protocols.py  test_connection_comparison.py  test_flext_integration.py  test_metadata_feature.py  test_ssl_fix.py
tests/integration/: README.md  __init__.py  test_end_to_end_oracle.py  test_end_to_end_oracle_integration.py  test_performance_and_load.py
tests/unit/: README.md  __init__.py  test_alert_manager.py  test_alert_manager_comprehensive.py  test_basic.py  test_cli.py  (+29 more)
transform/: dbt_project.yml
(+73 files in other folders)
