[build-system]
    build-backend = "poetry.core.masonry.api"
    requires = [
        "poetry-core>=1.9.0",
    ]

[project]
    classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: Python :: 3.13",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Topic :: System :: Systems Administration",
        "Typing :: Typed",
    ]
    dependencies = [
        "click (>=8.2.1)",
        "dotenv (>=0.9.9)",
        "flext-core @ file:../flext-core",
        "flext-db-oracle @ file:../flext-db-oracle",
        "flext-observability @ file:../flext-observability",
        "flext-tap-oracle-wms @ file:../flext-tap-oracle-wms",
        "meltano (>=3.8.0)",
        "pydantic (>=2.12.3)",
        "pyyaml (>=6.0.2)",
        "requests (>=2.32.4)",
        "structlog (>=25.4.0)",
        "flext-cli @ file:///home/marlonsc/flext/flext-cli",
    ]
    description = "Grupo Nos Meltano Native - Enterprise ETL Pipeline for Grupo Nos"
    keywords = [
        "enterprise",
        "flext",
        "migration",
        "production",
        "typed",
    ]
    name = "gruponos-meltano-native"
    readme = "README.md"
    requires-python = ">=3.13,<3.14"
    version = "0.9.0"
    [[project.authors]]
        email = "team@flext.sh"
        name  = "FLEXT Team"

    [[project.maintainers]]
        email = "team@flext.sh"
        name  = "FLEXT Team"

    [project.license]
        text = "MIT"

    [project.urls]
        Documentation = "https://github.com/flext-sh/flext/blob/main/README.md"
        Homepage      = "https://github.com/flext-sh/flext"
        Repository    = "https://github.com/flext-sh/flext"

[tool]
    [tool.bandit]
        exclude_dirs = [
            "build",
            "dist",
            "tests",
        ]
        skips = [
            "B101",
            "B601",
        ]

    [tool.deptry]
        known_first_party = [
            "gruponos_meltano_native",
        ]

    [tool.poetry]
        [[tool.poetry.packages]]
            from    = "src"
            include = "gruponos_meltano_native"


        [tool.poetry.dependencies]
            python = ">=3.13,<3.14"
        flext-cli = {develop = true}


            [tool.poetry.dependencies.flext-core]
                develop = true
                path    = "../flext-core"

            [tool.poetry.dependencies.flext-observability]
                develop = true
                path    = "../flext-observability"

            [tool.poetry.dependencies.flext-ldap]
                develop = true
                path    = "../flext-ldap"

            [tool.poetry.dependencies.flext-ldif]
                develop = true
                path    = "../flext-ldif"

        [tool.poetry.dependencies.flext-quality]
            develop = true
            optional = true
            path = "../flext-quality"

        [tool.poetry.group.dev.dependencies]
            autoflake      = ">=2.3.1"
            black          = ">=25.1.0"
            codespell      = ">=2.3.0"
            commitizen     = ">=4.8.3"
            deptry         = ">=0.23.0"
            detect-secrets = ">=1.5.0"
            isort          = ">=6.0.1"
            pre-commit     = ">=4.0.1"
            pylint         = ">=3.3.0"
            pyrefly        = "^0.34.0"
            pyupgrade      = ">=3.19.0"
            radon          = ">=6.0.1"
            ruff           = ">=0.12.3"
            vulture        = ">=2.13"

        [tool.poetry.group.test.dependencies]
            
        
factory-boy         = ">=3.3.1"
            faker               = ">=37.4.0"
            hypothesis          = ">=6.125.0"
            pytest              = ">=8.4.0"
            pytest-benchmark    = ">=5.1.0"
            pytest-clarity      = ">=1.0.1"
            pytest-cov = "=7.0.0"
            pytest-deadfixtures = ">=2.2.1"
            pytest-env          = ">=1.1.5"
            pytest-mock         = ">=3.14.0"
            pytest-sugar        = ">=1.0.0"
            pytest-timeout      = ">=2.4.0"
            pytest-xdist        = ">=3.8.0"

        [tool.poetry.group.typings.dependencies]
            types-psutil          = ">=7.0.0"
            types-python-dateutil = ">=2.9.0"
            types-pyyaml          = ">=6.0.12"
            types-redis           = ">=4.6.0"
            types-requests        = ">=2.32.4"
            types-setuptools      = ">=80.9.0"
            types-toml            = ">=0.10.8.20240310"

        [tool.poetry.group.security.dependencies]
            bandit    = ">=1.8.0"
            pip-audit = ">=2.7.3"

    [tool.pytest.ini_options]
        addopts = [
            "--cov-fail-under=90",
            "--maxfail=1",
            "--strict-config",
            "--strict-markers",
            "--tb=short",
            "-ra",
        ]
        markers = [
            "destructive: Tests that may modify or delete data",
            "e2e: End-to-end tests",
            "integration: Integration tests",
            "memory: Memory usage tests",
            "oracle: Oracle database tests",
            "performance: Performance tests",
            "slow: Slow tests",
            "smoke: Smoke tests",
            "unit: Unit tests",
            "wms: WMS integration tests",
        ]
        minversion = "8.0"
        testpaths = [
            "tests",
        ]

    [tool.pyrefly]
        # Include sibling FLEXT project paths for type checking
        search-path = [
            "../flext-core/src",
            "../flext-cli/src",
            "../flext-ldif/src",
            "../flext-ldap/src",
            "../flext-observability/src",
            "../flext-db-oracle/src",
            "../flext-meltano/src",
            "../flext-tap-oracle-wms/src",
            "src",
            "tests",
            "examples",
            "scripts",
        ]

    [tool.ruff]
        extend = "../ruff-shared.toml"

            [tool.ruff.lint.isort]
                known-first-party = [
                    "gruponos_meltano_native",
                ]
